@@ -1,3 +1,9 @@
+2007-04-22  Robert Ancell  <robert.ancell@gmail.com>
+
+	* Changed AI process management to remove os.forkpty() (not on Solaris) (Bug #426538)
+	* If an AI dies the game completes and the UI displays "opponent has died". This is
+	  an actual tag in the PGN spec I was looking for a reason to use!!
+
 2007-04-09  Robert Ancell  <robert.ancell@gmail.com>
 
 	* Merged changes from sf.net version 1.0.5:
